--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,10 +8,25 @@
     </head>
     <body>
         <div id="app">
-            <h1>四六级成绩查询</h1>
-            <div>
-                <input v-model="examId" placeholder="请输入准考证号" />
-                <input v-model="name" placeholder="请输入姓名" />
+            <h1 style="color: #3083c7">
+                全国大学英语四、六级考试（含口试） 成绩查询
+            </h1>
+            <div style="display: flex; flex-direction: column; gap: 10px">
+                <div style="display: flex; gap: 10px; align-items: center">
+                    <span>考试级别: </span>
+                    <select style="width: 50%; height: 100%">
+                        <option value="cet4">CET-4</option>
+                        <option value="cet6">CET-6</option>
+                    </select>
+                </div>
+                <div style="display: flex; gap: 10px; align-items: center">
+                    <span>准考证号: </span>
+                    <input v-model="examId" placeholder="请输入准考证号" />
+                </div>
+                <div style="display: flex; gap: 10px; align-items: center">
+                    <span>考生姓名: </span>
+                    <input v-model="name" placeholder="请输入考生姓名" />
+                </div>
                 <button @click="queryScore">查询</button>
             </div>
             <div v-if="result">
