--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,26 +8,31 @@
     </head>
     <body>
         <div id="app">
-            <h1 style="color: #3083c7">
+            <h1 style="color: #3083c7; width: 400px; word-break: normal">
                 全国大学英语四、六级考试（含口试） 成绩查询
             </h1>
             <div style="display: flex; flex-direction: column; gap: 10px">
-                <div style="display: flex; gap: 10px; align-items: center">
+                <div class="input-container">
                     <span>考试级别: </span>
-                    <select style="width: 50%; height: 100%">
-                        <option value="cet4">CET-4</option>
-                        <option value="cet6">CET-6</option>
+                    <select style="width: 224px; height: 38px; margin: 5px">
+                        <option value="cet-4">CET-4</option>
+                        <option value="cet-6">CET-6</option>
                     </select>
                 </div>
-                <div style="display: flex; gap: 10px; align-items: center">
+                <div class="input-container">
                     <span>准考证号: </span>
                     <input v-model="examId" placeholder="请输入准考证号" />
                 </div>
-                <div style="display: flex; gap: 10px; align-items: center">
+                <div class="input-container">
                     <span>考生姓名: </span>
                     <input v-model="name" placeholder="请输入考生姓名" />
                 </div>
-                <button @click="queryScore">查询</button>
+                <button
+                    @click="queryScore"
+                    style="width: 100px; margin: 0 auto"
+                >
+                    查询
+                </button>
             </div>
             <div v-if="result">
                 <h2>查询结果</h2>
